# AI534-MachineLearning

IA-1/: README.md  pyproject.toml
IA-1/ia_1/: RedundancyNormalized_1e_1.txt  RedundancyNormalized_1e_2.txt  ai1_skeleton_code.py  res10.txt  res11.txt  res12.txt  res5e10.txt  res8e10.txt  res9e10.txt  test.py  test.txt  test2.py
IA-2/: pyproject.toml
IA-2/ia_2/: IA2_skeleton_code.py
IA-3/: ia3_code.py
