[tool.poetry]
name = "ia-1"
version = "0.1.0"
description = ""
authors = ["Bharath Padmaraju <bharath.k.padmaraju@gmail.com>"]
readme = "README.md"
packages = [{include = "ia_1"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
