[tool.poetry]
name = "ia-2"
version = "0.1.0"
description = ""
authors = ["Bharath Padmaraju <bharath.k.padmaraju@gmail.com>"]
readme = "README.md"
packages = [{include = "ia_2"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
